--- a/recipes/changua.html
+++ b/recipes/changua.html
@@ -5,6 +5,7 @@
         <title></title>
     </head>
     <body>
-        <h1>Changua</h1>
+        <h1>Changua (milk broth with eggs)</h1>
+        <p><a href="./ahogado.html"><- previous recipe</a> /// <a href="../index.html">Main Page</a> /// <a href="./desayuno.html">next recipe -></a></p>
     </body>
 </html>
