--- a/recipes/desayuno.html
+++ b/recipes/desayuno.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Typical breakfast</h1>
+        <p><a href="./changua.html"><- previous recipe</a> /// <a href="../index.html">Main Page</a> /// <a href="./lasagna.html">next recipe -></a></p>
     </body>
 </html>
