--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,6 +5,7 @@
         <title></title>
     </head>
     <body>
-        
+        <h1>Vegetarian lasagna</h1>
+        <p><a href="./desayuno.html"><- previous recipe</a> /// <a href="../index.html">Main Page</a> /// <a href="./panBono.html">next recipe -></a></p>
     </body>
 </html>
