--- a/recipes/panBono.html
+++ b/recipes/panBono.html
@@ -5,6 +5,7 @@
         <title></title>
     </head>
     <body>
-        
+        <h1>Pan de Bono (Colombian bread)</h1>
+        <p><a href="./lasagna.html"><- previous recipe</a> /// <a href="../index.html">Main Page</a> /// <a href="">next recipe -></a></p>
     </body>
 </html>
