images added and text of recipes completed

--- a/recipes/changua.html
+++ b/recipes/changua.html
@@ -2,10 +2,46 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <title>Changua</title>
     </head>
     <body>
-        <h1>Changua (milk broth with eggs)</h1>
-        <p><a href="./ahogado.html"><- previous recipe</a> /// <a href="../index.html">Main Page</a> /// <a href="./desayuno.html">next recipe -></a></p>
+        <h1>Changua</h1>
+        <img src="https://cloudfront-us-east-1.images.arcpublishing.com/infobae/JJLCKPV74ZH4RPAF6GMQPCY2RA.jpg" alt="Changua" width="40%">
+        <h2>Ingredients</h2>
+        <ol>
+            <li>4 cups of water</li>
+            <li>2 cups of milk</li>
+            <li>4 eggs</li>
+            <li>1 cup of green onion, chopped</li>
+            <li>1 cup of fresh cilantro, chopped</li>
+            <li>2 tablespoons of butter</li>
+            <li>Salt and pepper to taste</li>
+            <li>4 slices of bread (your choice)</li>
+            <li>Fresh cheese (optional, for serving)</li>
+        </ol>
+        <h2>Instructions</h2>
+        <ol>
+            <li><strong>Prepare the broth:</strong></li>
+            <ul>
+                <li>In a large pot, bring the water with the butter and chopped green onion to a boil. Cook over medium heat until the onion is soft, about 5 minutes.</li>
+            </ul>
+            <li><strong>Add the milk:</strong></li>
+            <ul>
+                <li>Stir in the milk and simmer on low heat. Mix well to combine the flavors.</li>
+            </ul>
+            <li><strong>Cook the eggs:</strong></li>
+            <ul>
+                <li>Crack an egg into a bowl and gently pour it into the pot. Repeat with the other eggs. Cook for about 3-5 minutes, or until the whites are firm but the yolks are still slightly runny (cook longer if you prefer firmer yolks).</li>
+            </ul>
+            <li><strong>Season:</strong></li>
+            <ul>
+                <li>Add salt and pepper to taste. Remove from heat and stir in the chopped cilantro.</li>
+            </ul>
+            <li><strong>Serve:</strong></li>
+            <ul>
+                <li>Ladle the hot changua into deep plates. Add a slice of bread to each plate and, if desired, a bit of fresh cheese on top.</li>
+            </ul>
+        </ol>
+        <p><a href="./ahogado.html"><- previous recipe</a> /// <a href="../index.html">Main Page</a> /// <a href="./panBono.html">next recipe -></a></p>
     </body>
 </html>
