--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
         <p>English is not my mother tongue, several texts have been translated with the help of <a href="https://www.deepl.com/es/translator">Deepl</a></p>
         <p>The names of the recipes are in Spanish (the translation is very weird), <strong>but the contents are in English.</strong></p>
         <ul>
-            <li><a href="./recipes/ahogado.html">Ahogado de carne con plátano (Meat with banana)</a></li>
-            <li><a href="./recipes/changua.html">Changua (milk broth with eggs)</a></li>
-            <li><a href="./recipes/desayuno.html">Typical breakfast</a></li>
-            <li><a href="./recipes/lasagna.html">Vegetarian lasagna</a></li>
+            <li><a href="./recipes/ahogado.html">Ahogado de carne con plátano (Beef Ahogado with Plantains)</a></li>
+            <li><a href="./recipes/changua.html">Changua (traditional soup from Colombia)</a></li>
             <li><a href="./recipes/panBono.html">Pan de Bono (Colombian bread)</a></li>
         </ul>
     </body>
